--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
 		<title>Vedang Sati</title>
 	</head>
 	<body>
+		<div id="photo">
+			<a href="http://www.facebook.com/vedang.sati" TARGET = "_blank"><img src="img/v.jpg" /></a>
+		</div>
 		<div id="name">
-			Hi, I am Vedang Sati 
+			<p align="center">Hi I am <br/>
+			<span style="font-family:woodcut;">Vedang Sati</span></p>
 		</div>
 		<div id="cccf" align="center">
-			<a href="http://www.facebook.com/questioninggod">Questioning God; Physics Community</a>
+			<a href="http://www.facebook.com/questioninggod" TARGET = "_blank">My Science</a>
+			<a href="http://www.amazon.com/Vedang-Sati/e/B00KDHQ0GS/" TARGET = "_blank">My Books</a>
+			<a href="http://www.goodreads.com/author/show/8271400.Vedang_Sati?from_search=true&search_version=service" TARGET = "_blank">My Ratings</a>
 		</div>
 		<div id="links" align="center">
-			<a href="http://www.amazon.com/Vedang-Sati/e/B00KDHQ0GS/"><i class="fa fa-amazon"></i></a>
-			<a href="http://www.facebook.com/vedang.sati" title="Facebook - Vedang Sati"><i class="fa fa-facebook"></i></a>
-			<a href="mailto:vedangsati@gmail.com" title="@vedangsati@gmail.com">
-			<i class="fa fa-envelope"></i></a>
+			<a href="http://www.facebook.com/vedang.sati" title="Facebook - Vedang Sati" TARGET = "_blank"><i class="fa fa-facebook"></i></a>
+			<a href="mailto:vedangsati@gmail.com" title="@vedangsati@gmail.com" TARGET = "_blank"><i class="fa fa-envelope"></i></a>
+			<a href="https://www.youtube.com/user/vedang7" TARGET = "_blank"><i class="fa fa-youtube"></i></a>
 		</div>
 	</body>
 </html>
